@@ -2,26 +2,24 @@ package it.gov.pagopa.pu.registry.mapper.installment;
 
 import it.gov.pagopa.pu.registry.event.payments.dto.DebtPositionEventDTO;
 import it.gov.pagopa.pu.registry.model.InstallmentRegistry;
-import it.gov.pagopa.pu.workflowhub.dto.generated.InstallmentDTO;
-import it.gov.pagopa.pu.workflowhub.dto.generated.PaymentOptionDTO;
-import lombok.extern.slf4j.Slf4j;
+import it.gov.pagopa.pu.registry.utils.ExtractionUtils;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
 import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
+import java.util.Set;
 
-@Slf4j
 @Service
 public class DebtPositionEventDTO2InstallmentRegistryMapper {
 
   public List<InstallmentRegistry> map(DebtPositionEventDTO dto) {
     if (dto.getPayload().getPaymentOptions() == null) return List.of();
 
+    Set<String> iuds = ExtractionUtils.extractIudsFromDescription(dto.getEventDescription());
+
     return dto.getPayload().getPaymentOptions().stream()
       .filter(paymentOptionDTO -> paymentOptionDTO.getInstallments() != null)
       .flatMap(paymentOptionDTO -> paymentOptionDTO.getInstallments().stream())
+      .filter(installmentDTO -> iuds.isEmpty() || iuds.contains(installmentDTO.getIud()))
       .map(installmentDTO -> InstallmentRegistry.builder()
         .eventId(dto.getEventId() + "." + installmentDTO.getNav())
         .eventType(dto.getEventType())
@@ -33,7 +31,7 @@ public class DebtPositionEventDTO2InstallmentRegistryMapper {
         .organizationId(dto.getPayload().getOrganizationId())
         .nav(installmentDTO.getNav())
         .build())
-      .collect(Collectors.toList());
+      .toList();
   }
 
 }
